# robot_desc

./: CMakeLists.txt  README.md  package.xml
cfg/: dynamic_params.cfg
launch/: robot_desc.launch
src/: robot_static_tf_publisher.cpp
